change env example

--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,9 @@ DB_DATABASE=l10_base
 DB_USERNAME=l10_base
 DB_PASSWORD=password
 
-SUPER_ADMIM_NAME=
-SUPER_ADMIM_EMAIL=
-SUPER_ADMIM_PASSWORD=
+SUPER_ADMIM_NAME="SysAdmin"
+SUPER_ADMIM_EMAIL="sis@admin.com"
+SUPER_ADMIM_PASSWORD=123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
