--- a/composer.json
+++ b/composer.json
@@ -5,27 +5,27 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.2",
         "barryvdh/laravel-dompdf": "^2.0",
         "fruitcake/php-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-activitylog": "^4.0",
-        "spatie/laravel-permission": "^5.4"
+        "spatie/laravel-permission": "^6.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
         "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^1.5",
+        "laravel/breeze": "^2.0",
         "laravel/pint": "^1.3",
         "laravel/sail": "^1.0.1",
         "liip/rmt": "^1.6",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0",
+        "nunomaduro/collision": "^8.1",
+        "phpunit/phpunit": "^11.0",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
